tests/NormalTests/paczka1/fuzzy1/62403096.err
Error in line 2: S9nhSxa7X S417 10,1
Error in line 16: o7lJ3Hf3r A639 23,1
Error in line 19: o7lJ3Hf3r S417 100,0
Error in line 34: o7lJ3Hf3r S417 17,2
